--- a/NewKartoteka/ChooseGoogleDriveDirWin.xaml
+++ b/NewKartoteka/ChooseGoogleDriveDirWin.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:NewKartoteka"
         mc:Ignorable="d"
@@ -31,7 +32,9 @@
         <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Выберите действие" FontSize="20" Grid.Row="0" Grid.ColumnSpan="3" Margin="10,19,10,19"  />
         <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Выбор папки Google Drive" FontSize="20" Grid.Row="1" Grid.Column="0" Margin="10,19,10,19"  />
         <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Text="Сохранить в корневую папку" FontSize="20" Grid.Row="1" Grid.Column="1" Margin="10,19,10,19"  />
-        <ListBox x:Name="FoldersList" Height="280" Margin="0,17,10,15" ItemsSource="{Binding Path=Folders, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+        <Image gif:ImageBehavior.AnimatedSource="Leonardo.gif"  Grid.Column="0"  Grid.Row="2" Visibility="{Binding IsFoldersPreloaderActive, Converter={StaticResource BoolToVis}}"  
+                               VerticalAlignment="Center" HorizontalAlignment="Center" Width="250" Height="250" />
+        <ListBox Visibility="{Binding IsListOfFoldersActive, Converter={StaticResource BoolToVis}}" x:Name="FoldersList" Height="280" Margin="0,17,10,15" ItemsSource="{Binding Path=Folders, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                                      SelectionMode="Single" Grid.Column="0"  Grid.Row="2">
         </ListBox>
         <Button  Content="Подтвердить" Style="{StaticResource ChooseFolderButtonStyle}" Command="{Binding ExportFileToGoogleDriveCommand}"
